--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
         min-height: 225px;
         background: transparent;
         min-height: 333px;
-        margin-left: -65px;
+        /*margin-left: -65px;*/
 
     }
     .head-body{
@@ -42,15 +42,15 @@ body{
 
     }
     .watch{
-        width: 100px;
+        width: 94px;
         margin: auto;
         border: solid;
         border-width: 1px;
         border-radius: 33px;
         height: 18px;
         cursor: pointer;
-        margin-left: 55%;
-        margin-top: -3%;
+        /* margin-left: 55%; */
+        margin-top: -5%;
     }
     .watch p{
         font-size: 7px;
@@ -75,9 +75,9 @@ body{
         width: 50%;
     }
     .scr img{
-        width: 501%;
-        margin-left: -55px;
-        margin-top: 104px;
+        width: 133px;
+        margin-left: -71px;
+        margin-top: 169px;
     }
     .abtl{
         width: 65%;
@@ -95,7 +95,7 @@ body{
         font-size: 27px;
     }
     .how{
-        padding-left: 17%;
+        /*padding-left: 17%;*/
         padding-right: 3%;
     }
     .icon{
@@ -106,7 +106,7 @@ body{
         font-size: 14px;
     }
     .store2{
-        margin-left: 61px;
+        /*margin-left: 61px;*/
     }
     .s2{
         height: 140px;
@@ -120,9 +120,9 @@ body{
 
     }
     .footer p{
-        font-size: 10px;
+        font-size: 9px;
         padding: 10px;
-        padding-left: 85px;
+        padding-left: 13px;
     }
     .parallax3{
         background: #EDEEF8;
@@ -156,15 +156,15 @@ body{
     }
     .lineL{
         position: absolute;
-        width: 26%;
-        margin-top: -41px;
+        width: 30%;
+        margin-top: -27px;
         margin-left: 17px;
     }
     .lineR{
-        width: 26%;
+        width: 30%;
         position: absolute;
-        margin-left: -133px;
-        margin-top: 76px;
+        margin-left: -112px;
+        margin-top: 60px;
     }
     .conDet{
         margin-top: -37px;
@@ -183,7 +183,7 @@ body{
 }
 @media screen and (min-width: 798px) {
     .parallax-window {
-        min-height: 800px;
+        min-height: 0;
         background: transparent;
 
 
@@ -377,7 +377,7 @@ body{
     color:#000;
 }
 .dis{
-    margin-left: 90px;
+    margin-left: 11px;
     margin-top: 7%;
 }
 .about span{
@@ -439,4 +439,18 @@ body{
 .close2{
     position: absolute;
 }
-
+.s2{
+    width: 100%;
+    margin-left: 0;
+}
+.s3{
+    width: 100%;
+    margin-left: 0;
+}
+.parallax2{
+    margin-top: -64px;
+}
+parallax3{
+    width: 100%;
+    margin-left: 0;
+}
