video 2 styles added

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,10 @@ body{
     .video-js{
         z-index:1000;
     }
+    .my-video2-dimensions {
+        width: 80%;
+        margin: auto;
+    }
 
 
 
