hover effects added

--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,7 @@ body{
         font-size: 11px;
         margin-right: 43px;
         padding-top: 4px;
+        font-weight: 900;
     }
     .store img{
         width: 47%;
@@ -474,4 +475,19 @@ body{
 parallax3{
     width: 100%;
     margin-left: 0;
+}
+.watch:hover{
+    background: #7E1D7E;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+    transition: 0.3s;
+    color: #ffffff;
+}
+.store img:hover{
+    transition: 0.3s;
+    width: 50%;
+}
+.nav-menu a:hover{
+    color:#7E1D7E ;
+    transition: 0.3s;
+    font-weight: 900;
 }
