background animations added

--- a/css/style.css
+++ b/css/style.css
@@ -506,3 +506,16 @@ parallax3{
 .my-video-dimensions{
     z-index: 2000;
 }
+.hero{
+    background: gray url(https://subtlepatterns.com/patterns/geometry2.png) repeat 0 0;
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    box-sizing: border-box;
+    -webkit-animation: slide 20s linear infinite;
+}
+
+@-webkit-keyframes slide {
+    from { background-position: 0 0; }
+    to { background-position: -400px 0; }
+}
