link to app store added

--- a/css/style.css
+++ b/css/style.css
@@ -519,3 +519,10 @@ parallax3{
     from { background-position: 0 0; }
     to { background-position: -400px 0; }
 }
+.blank-head{
+    text-align: center;
+    margin-top: 18%;
+    font-size: 80px;
+    font-family: gilroy;
+    color: #53335c;
+}
